# athena

./: .coveragerc  .gitignore  Dockerfile  Dockerfile.production  README.md  docker-compose.yml  docker-compose_copy.yml  pyproject.toml
.github/workflows/: pipeline.yml
athena/: __init__.py  main.py
athena/core/logger/: logger.py
athena/middleware/http/: http.py
athena/v1/: __init__.py
athena/v1/ping/: __init__.py  connect.py
athena/v1/website/: __init__.py
database/: Dockerfile
docs/: docker.md  python.md  test.md
nginx/: Dockerfile  nginx.conf
src/: .coveragerc  .dockerignore  Dockerfile  Dockerfile.production  entrypoint.sh  manage.py  requirements.txt
src/api/: __init__.py  configurations.py  models.py
src/api/endpoints/: __init__.py
src/api/endpoints/ping/: __init__.py  ping.py
src/api/endpoints/twitch/: __init__.py  twitch.py
src/api/tests/: conftest.py
src/api/tests/functional/: test_ping.py  test_twitch.py
src/api/tests/unit/: test_configurations.py
src/main/resources/: api.cfg  logging.cfg  manage.py  requirements.txt
src/main/resources/api/: __init__.py  configurations.py
src/main/resources/api/endpoints/: __init__.py
src/main/resources/api/endpoints/ping/: __init__.py  ping.py
src/tests/resources/: conftest.py
src/tests/resources/functional/: test_ping.py
src/tests/resources/unit/: test_configurations.py
